--- a/Func Req.tex
+++ b/Func Req.tex
@@ -648,13 +648,21 @@ Sequence Diagram\\
 %LUTFIYYA
 \section{Statistical Reporting}
 \subsection*{Description:}
+This use case gives the user with certain privileges the ability to calculate statistical information and to generate reports of participants evaluation 
 \subsection{Prioritization:} 
+\textbf{Important}: Evaluation Report
 \subsection{Conditions and Data Structures:}
 \subsubsection*{Pre-Conditions:}
+A lecturer has to be a registered user of a Buzz Space and must also be logged in to be able to generate an evaluation report of the students. The UserID of a participant should exist for reporting purposes. The ThreadID has to exist.\\
 \subsubsection*{Post-Conditions:}
+A lecturer should get statistical information about each student and generate an evaluation report for a participant.\\
 \subsubsection*{Requests and Results Data Structures:}
+\includegraphics{Images/Report/Input&Output}
 \subsection{Required Functionality:} 
+\includegraphics[width=15cm,height=10cm]{./Images/Report/functional_requirements}\\
+\\
 \subsection{Process Specifications:} 
+\includegraphics[width=15cm,height=10cm]{./Images/Report/process_spec}
 
 %LEAVE
 \newpage
