Semi-formatted Thread_SCHM
Summarize, Close, Hide, Move Threads

--- a/Func Req.tex
+++ b/Func Req.tex
@@ -333,8 +333,12 @@ This feature is Nice-To-Have. The system will not be immensely devalued if this 
 1.	The thread is summarised successfully if all pre-conditions are me.\\
 2.	The system displays an error message if at least one of the pre-conditions are violated.\\
 \subsubsection*{Requests and Results Data Structures:}
+\includegraphics{Images/SCHMThread/SummarizeInOut.jpg}\\
 \subsection{Required Functionality:} 
+Summarizing a thread\\
+\includegraphics[width=1\linewidth]{./Images/SCHMThread/ThreadSummarize.jpg}\\
 \subsection{Process Specifications:} 
+\includegraphics[width=1.2\linewidth]{./Images/BestAnswer/SummarizeAct.jpg}\\
 
 %JIMMY
 \section{Hide Thread}
@@ -352,8 +356,12 @@ It is considered critical to the system. It remains key that the system maintain
 3.	A notification is sent to the owner of the thread that it is pending investigation.\\
 4.	The thread remains unhidden and an error message is shown if at least one of the pre-conditions aren't met.\\
 \subsubsection*{Requests and Results Data Structures:}
+\includegraphics{Images/SCHMThread/HideInOut.jpg}\\
 \subsection{Required Functionality:} 
+Hiding a thread.\\
+\includegraphics[width=1\linewidth]{./Images/SCHMThread/ThreadHide.jpg}\\
 \subsection{Process Specifications:} 
+\includegraphics[width=1.2\linewidth]{./Images/BestAnswer/HideAct.jpg}\\
 
 %JIMMY
 \section{Close Thread}
@@ -368,9 +376,14 @@ This feature is considered important. The system can cope without it but it is n
 \subsubsection*{Post-Conditions:}
 1.	An error message is shown if at least one of the pre-conditions have been violated.\\
 2.	The thread is closed successfully if the pre-conditions have been met or open otherwise.\\
+3.	User is notified that thread is closed.\\
 \subsubsection*{Requests and Results Data Structures:}
+\includegraphics{Images/SCHMThread/CloseInOut.jpg}\\
 \subsection{Required Functionality:} 
-\subsection{Process Specifications:} 
+Closing a thread.\\
+\includegraphics[width=1\linewidth]{./Images/SCHMThread/ThreadClose.jpg}\\
+\subsection{Process Specifications:}
+\includegraphics[width=1.2\linewidth]{./Images/BestAnswer/CloseAct.jpg}\\
 
 %JIMMY
 \section{Move Thread}
@@ -386,8 +399,12 @@ Moving a thread can entail either deleting it from its original Buzz space to a 
 2.	The thread is successfully moved if both pre-conditions are met.\\
 3.	The thread owner is notified if the thread is successfully moved.\\
 \subsubsection*{Requests and Results Data Structures:}
+\includegraphics{Images/SCHMThread/MoveInOut.jpg}\\
 \subsection{Required Functionality:} 
+Moving a thread.\\
+\includegraphics[width=1\linewidth]{./Images/SCHMThread/ThreadMove.jpg}\\
 \subsection{Process Specifications:} 
+\includegraphics[width=1.2\linewidth]{./Images/BestAnswer/MoveAct.jpg}\\
 
 %LEAVE
 \newpage
